[package]
name = "koyomi-rs"
version = "0.3.0"
authors = ["panther-king"]
description = "Japanese calendar written in Rust"
repository = "https://github.com/panther-king/koyomi-rs"
license-file = "LICENSE"
readme = "README.md"
keywords = ["Japanese", "calendar"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"

[dev-dependencies]
rstest = "0.26.1"
